nullable 하게 코드 변경 및 리팩토링
map 연산자 사용